--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Net Ninja</title>
     <script src="https://unpkg.com/vue@3.0.2"></script>
+    <style>
+        .box{
+            padding: 100px 0;
+            width: 400px;
+            text-align: center;
+            background-color: #DDD;
+            margin: 20px;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello, Vue :)</h1>
@@ -19,7 +29,15 @@
             <span v-else>Show Books</span>
         </button>
 
-        <div v-show="showBooks">currently showing books</div>
+        <br />
+
+        <!-- Mouse events  -->
+        <div class="box" @mouseover="handleEvent($event, 5)">mouseover</div>
+        <div class="box" @mouseleave="handleEvent">mouseleave</div>
+        <div class="box" @dblclick="handleEvent">doubleclick</div> 
+        <div class="box" @mousemove="handleMousemove">Position - {{x}} - {{y}}</div>
+
+        <!-- <div v-show="showBooks">currently showing books</div> -->
         <!-- Directives:type of event @ is a shortcut for v-on -->
         <!-- <button v-on:click="age++">Increase Age</button>
         <button v-on:click="age--">Decrease Age</button>
