--- a/index.html
+++ b/index.html
@@ -6,28 +6,47 @@
     <title>Vue Net Ninja</title>
     <script src="https://unpkg.com/vue@3.0.2"></script>
     <style>
-        .box{
-            padding: 100px 0;
-            width: 400px;
-            text-align: center;
-            background-color: #DDD;
-            margin: 20px;
-            display: inline-block;
+        body{
+            background-color: #eee;
+            max-width: 960px;
+            margin: 20px auto;
+        }
+
+        p, h3, ul{
+            margin: 0;
+            padding: 0;
+        }
+
+        li{
+            list-style-type: none;
+            background-color: #fff;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        li.fav{
+            background-color: #ff9ed2;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <h1>Hello, Vue :)</h1>
+    <!-- <h1>Hello, Vue :)</h1> -->
 
     <div id="app">
         <!-- attribute binding -->
-        <a href=""></a>
-        
+        <!-- <a :href="url">good website</a> -->
+        <!-- <p>{{ filteredBooks }}</p> -->
         <div v-if="showBooks"> 
             <ul>
-                <li v-for="book in books">
+                <li @click="toggleFav(book)" v-for="book in filteredBooks" :class="{ fav: book.isFav }">
                     <h3>{{book.title}} </h3>
                     <p>{{book.author}}</p>
+                    <img :src="book.img" alt="book.title" />
                 </li>
             </ul>
         </div>
